--- a/E-Migrant.App/E-Migrant.App.Frontend/Pages/RegistroDatosMigrante/RegistroDatosMigra.cshtml
+++ b/E-Migrant.App/E-Migrant.App.Frontend/Pages/RegistroDatosMigrante/RegistroDatosMigra.cshtml
@@ -6,20 +6,20 @@
 
     <div class="card col-md-5 p-md-5 container">
         <h4 class="card-title text-center m-2">Registrar Datos Migrante</h4>
-        <form class="row g-3 needs-validation" novalidate>
+        <form class="row g-3 needs-validation" method="post" novalidate>
             <div class="col-md-12">
-                <label for="txtNombres" class="form-label">nombres</label>
-                <input type="text" class="form-control" id="txtNombres" required />
+                <label for="nombre" class="form-label">nombres</label>
+                <input type="text" class="form-control" id="nombre" required />
                 <div class="invalid-feedback">Este campo es requerido</div>
             </div>
             <div class="col-md-12">
-                <label for="txtApellidos" class="form-label">Apellidos</label>
-                <input type="text" class="form-control" id="txtApellidos" required />
+                <label for="apellidos" class="form-label">Apellidos</label>
+                <input type="text" class="form-control" id="apellidos" required />
                 <div class="invalid-feedback">Este campo es requerido</div>
             </div>
             <div class="col-md-12">
-                <label for="txtPais" class="form-label">País</label>
-                <input type="text" class="form-control" id="txtPais" required />
+                <label for="pais" class="form-label">País</label>
+                <input type="text" class="form-control" id="pais" required />
                 <div class="invalid-feedback">Este campo es requerido</div>
             </div>
             <div class="col-md-6 mt-4">
@@ -34,13 +34,13 @@
                     <div class="invalid-feedback">Este campo es requerido</div>
             </div>
             <div class="col-md-6">
-                <label for="txtidentificacion" class="form-label">Identificación</label>
-                <input type="text" class="form-control" id="txtidentificacion" required />
+                <label for="numeroIdentificacion" class="form-label">Identificación</label>
+                <input type="text" class="form-control" id="numeroIdentificacion" required />
                 <div class="invalid-feedback">Este campo es requerido</div>
             </div>
             <div class="col-md-12">
-                <label for="txtiCiudad" class="form-label">Ciudad</label>
-                <input type="text" class="form-control" id="txtCiudad" />
+                <label for="ciudad" class="form-label">Ciudad</label>
+                <input type="text" class="form-control" id="ciudad" />
             </div>
             <div class="col-md-12">
                 <label for="txtCituacionLaboral" class="form-label">Cituación laboral</label>
@@ -64,8 +64,8 @@
                 <input type="text" class="form-control" id="txtCelular"  />
             </div>
             <div class="col-md-12">
-                <label for="txtFechaNacimiento" class="form-label">Fecha Nacimiento</label>
-                <input type="text" class="form-control" id="txtFechaNacimiento" required />
+                <label for="fechaNacimiento" class="form-label">Fecha Nacimiento</label>
+                <input type="text" class="form-control" id="fechaNacimiento" required />
                 <div class="invalid-feedback">Este campo es requerido</div>
             </div>
 
