--- a/E-Migrant.App/E-Migrant.App.Frontend/Areas/Identity/Pages/Account/Register.cshtml
+++ b/E-Migrant.App/E-Migrant.App.Frontend/Areas/Identity/Pages/Account/Register.cshtml
@@ -19,7 +19,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="Input.Password"></label>
-                <input asp-for="Input.Password" class="form-control" />
+                <input asp-for="Input.Password" class="form-control" id="password"/>
+                 <div class="mt-2">
+                    <i class="far fa-eye" onclick="mostrarContrasena()"></i>
+                </div>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
