--- a/E-Migrant.App/E-Migrant.App.Frontend/Pages/MisDatosMigrante/MisDatosMigrante.cshtml
+++ b/E-Migrant.App/E-Migrant.App.Frontend/Pages/MisDatosMigrante/MisDatosMigrante.cshtml
@@ -1,10 +1,77 @@
 ﻿@page
-@model E_Migrant.App.Frontend.Pages.RegistroDatosMigra
+
 @{
 }
+
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Identity
-
+@using E_Migrant.App.Persistencia
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
+@model E_Migrant.App.Frontend.Pages.RegistroDatosMigra
+<form>
+    <div class="col-md-12">
 
+        <label for="nombre" class="form-label">nombres</label>
+        <input value="@UserManager.GetUserName(User)" asp-area="Identity" type="text"  class="form-control"
+            id="nombre" />
+        <div class="invalid-feedback">Este campo es requerido</div>
+    </div>
+    <div class="col-md-12">
+
+        <h1>@Model.migrante.nombre Hola</h1>
+        
+        
+    </div>
+
+    <!--
+            <div class="col-md-12">
+                <label for="apellidos" class="form-label">Apellidos</label>
+                <input type="text" asp-for="Input.apellido" class="form-control" id="apellidos"  required />
+                <div class="invalid-feedback">Este campo es requerido</div>
+            </div>
+            <div class="col-md-12">
+                <label for="pais" class="form-label">País</label>
+                <input type="text" asp-for="Input.pais" class="form-control" id="pais" required />
+                <div class="invalid-feedback">Este campo es requerido</div>
+            </div>
+            <div class="col-md-6 mt-4">
+                    <select class= aria-label="Default select example" asp-for="Input.TipoDocumento" required>
+
+                        <option selected >Tipo Documento</option>
+                        <option value="0">Tarjeta identidad</option>
+                        <option value="1">cedula extranjeria</option>
+                        <option value="2">Pasaporte</option>
+                        <option value="3">otro</option>
+                    </select>
+                    <div class="invalid-feedback">Este campo es requerido</div>
+            </div>
+            <div class="col-md-6">
+                <label for="numeroDocumento" class="form-label">Identificación</label>
+                <input asp-for="Input.numeroDocumento" type="text" class="form-control" id="numeroIdentificacion"  required />
+                <div class="invalid-feedback">Este campo es requerido</div>
+            </div>
+            <div class="col-md-12">
+                <label for="ciudad" class="form-label">Ciudad</label>
+                <input asp-for="Input.ciudad" type="text" class="form-control" id="ciudad" />
+            </div>
+            <div class="col-md-12">
+                <label for="cituacionLaboral" class="form-label">Situación laboral</label>
+                <input asp-for="Input.SituacionLaboral" type="text" class="form-control" id="cituacionLaboral" name="situacionLaboral" />
+            </div>
+            <div class="col-md-12">
+                <label for="txtDireccionActual" class="form-label">Dirección Actual</label>
+                <input asp-for="Input.DireccionActual" type="text" class="form-control" id="txtDireccionActual"  />
+            </div>
+
+            <div class="col-md-12">
+                <label for="txtCelular" class="form-label">Numero Telefonico</label>
+                <input type="text" class="form-control" id="txtCelular" />
+            </div>
+            <div class="col-md-12">
+                <label for="fechaNacimiento" class="form-label">Fecha Nacimiento</label>
+                <input asp-for="Input.fechaNacimiento" type="text" class="form-control" id="fechaNacimiento" required />
+                <div class="invalid-feedback">Este campo es requerido</div>
+            </div>
+            -->
+</form>
