--- a/E-Migrant.App/E-Migrant.App.Frontend/Pages/MisDatosMigrante/MisDatosMigrante.cshtml
+++ b/E-Migrant.App/E-Migrant.App.Frontend/Pages/MisDatosMigrante/MisDatosMigrante.cshtml
@@ -1,5 +1,4 @@
 ﻿@page
-
 @{
 }
 
@@ -8,7 +7,8 @@
 @using E_Migrant.App.Persistencia
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
-@model E_Migrant.App.Frontend.Pages.RegistroDatosMigra
+@model E_Migrant.App.Frontend.Pages.MisDatosMigrante.MisDatosMigranteModel
+
 <form>
     <div class="col-md-12">
 
