--- a/E-Migrant.App/E-Migrant.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/E-Migrant.App/E-Migrant.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -31,10 +31,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/RegistroDatosMigrante/RegistroDatosMigra">Registro Datos Migrante</a>
+                            <a class="nav-link text-dark" asp-page="/MisdatosMigrante/MisdatosMigrante" asp-route-correo="@UserManager.GetUserName(User)">Mis datos</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link text-dark" id="manage" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
