--- a/E-Migrant.App/E-Migrant.App.Frontend/Areas/Identity/Pages/Account/Register.cshtml
+++ b/E-Migrant.App/E-Migrant.App.Frontend/Areas/Identity/Pages/Account/Register.cshtml
@@ -80,8 +80,9 @@
             </div>
             <div class="col-md-12">
                 <label for="fechaNacimiento" class="form-label">Fecha Nacimiento</label>
-                <input asp-for="Input.fechaNacimiento" type="text" class="form-control" id="fechaNacimiento" required />
-                <div class="invalid-feedback">Este campo es requerido</div>
+                <input asp-for="Input.fechaNacimiento" type="text" class="form-control" />
+                <span class="text-danger" asp-validation-for="Input.fechaNacimiento"></span>
+
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
