--- a/E-Migrant.App/E-Migrant.App.Frontend/Pages/Error.cshtml
+++ b/E-Migrant.App/E-Migrant.App.Frontend/Pages/Error.cshtml
@@ -4,4 +4,4 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Revise que todos los campos esten llenos</h1>
+<h1 class="text-danger">Revise que todos los campos esten llenos ó empresa con NIT ya registrada</h1>
