--- a/E-Migrant.App/E-Migrant.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/E-Migrant.App/E-Migrant.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -52,6 +52,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" id="RegistraEntidad" asp-page="/RegistrarDatosEntidad/RegistrarDatosEntidad">Registra Tu Entidad</a>
+                        </li>
+
                     } 
                     </ul>
                 </div>
