Reto37 HU-37 cu-18

--- a/E-Migrant.App/E-Migrant.App.Frontend/Pages/ActualizarDatosEntidad/ActualizarDatosEntidad.cshtml
+++ b/E-Migrant.App/E-Migrant.App.Frontend/Pages/ActualizarDatosEntidad/ActualizarDatosEntidad.cshtml
@@ -7,17 +7,17 @@
     <div class="card col-md-5 p-md-5 container">
         <h4 class="card-title text-center m-2">Registro Entidades Colaboradoras</h4>
         <form class="row g-3 needs-validation" method="post" novalidate>
-
+                <input type="hidden" asp-for="datosEntidadesColaboradoras.id" />
+                <div class="col-md-12">
+                <label asp-for="datosEntidadesColaboradoras.nit" class="form-label"></label>
+                <input type="text" class="form-control" asp-for="datosEntidadesColaboradoras.nit" disabled/>
+                </div>
             <div class="col-md-12">
                 <label asp-for="datosEntidadesColaboradoras.razonSocial" class="form-label"></label>
                 <input type="text" class="form-control" asp-for="@Model.datosEntidadesColaboradoras.razonSocial" />
                 <span class="text-danger" asp-validation-for="datosEntidadesColaboradoras.razonSocial"></span>
             </div>
-            <div class="col-md-12">
-                <label asp-for="datosEntidadesColaboradoras.nit" class="form-label"></label>
-                <input type="text" class="form-control" asp-for="datosEntidadesColaboradoras.nit" />
-                <span class="text-danger" asp-validation-for="datosEntidadesColaboradoras.nit"></span>
-            </div>
+            
             <div class="col-md-12">
                 <label asp-for="datosEntidadesColaboradoras.direccion" class="form-label"></label>
                 <input type="text" class="form-control" asp-for="datosEntidadesColaboradoras.direccion" />
@@ -44,7 +44,7 @@
             </div>
 
             <div class="col-md-6 mt-4">
-                <select class=aria-label="Default select example" asp-for="datosEntidadesColaboradoras.serviciosOfrece">
+                <select aria-label="Default select example" asp-for="datosEntidadesColaboradoras.serviciosOfrece">
                     <option selected value="">Tipo Servicio</option>
                     <option value="1">Salud</option>
                     <option value="2">Jurídicosa</option>
@@ -57,7 +57,7 @@
                 <span class="text-danger" asp-validation-for="datosEntidadesColaboradoras.serviciosOfrece"></span>
             </div>
             <div class="col-md-6 mt-4">
-                <select class=aria-label="Default select example" asp-for="datosEntidadesColaboradoras.sector">
+                <select aria-label="Default select example" asp-for="datosEntidadesColaboradoras.sector">
                     <option selected value="">sector</option>
                     <option value="0">Publico</option>
                     <option value="1">Privado</option>
