--- a/E-Migrant.App/E-Migrant.App.Frontend/Pages/DetalleEntidad/DetalleEntidad.cshtml
+++ b/E-Migrant.App/E-Migrant.App.Frontend/Pages/DetalleEntidad/DetalleEntidad.cshtml
@@ -15,4 +15,4 @@
     <h4> Oferta de Servicio: @Model.datosEntidadesColaboradoras.serviciosOfrece</h4>
     
 </div>
-<a asp-route-nit="@Model.datosEntidadesColaboradoras.nit" asp-page="../ActualizarDatosEntidad/ActualizarDatosEntidad" class="btn btn-primary">Editar</a>
+<a asp-route-id="@Model.datosEntidadesColaboradoras.id" asp-page="../ActualizarDatosEntidad/ActualizarDatosEntidad" class="btn btn-primary">Editar</a>
