--- a/E-Migrant.App/E-Migrant.App.Frontend/Pages/MisDatosMigrante/MisDatosMigrante.cshtml
+++ b/E-Migrant.App/E-Migrant.App.Frontend/Pages/MisDatosMigrante/MisDatosMigrante.cshtml
@@ -32,7 +32,7 @@
                 <div class="invalid-feedback">Este campo es requerido</div>
             </div>
             <div class="col-md-6 mt-4">
-                    <select class= aria-label="Default select example" asp-for="migrante.tipoIdentificacion" required>
+                    <select class="" aria-label="Default select example" asp-for="migrante.tipoIdentificacion" required>
                         
                         <option selected >Tipo Documento</option>
                         <option value="0">Tarjeta identidad</option>
