--- a/E-Migrant.App/E-Migrant.App.Frontend/Pages/RegistrarDatosEntidad/RegistrarDatosEntidad.cshtml
+++ b/E-Migrant.App/E-Migrant.App.Frontend/Pages/RegistrarDatosEntidad/RegistrarDatosEntidad.cshtml
@@ -15,8 +15,8 @@
             </div>
             <div class="col-md-12">
                 <label asp-for="datosEntidadesColaboradoras.nit" class="form-label"></label>
-                <input type="text" class="form-control" asp-for="datosEntidadesColaboradoras.nit" />
-                <span class="text-danger" asp-validation-for="datosEntidadesColaboradoras.nit"></span>
+                <input type="text" class="form-control" asp-for="datosEntidadesColaboradoras.nit" required/>
+                
             </div>
             <div class="col-md-12">
                 <label asp-for="datosEntidadesColaboradoras.direccion" class="form-label"></label>
