Reto6 cu-3 Hu-6

--- a/E-Migrant.App/E-Migrant.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/E-Migrant.App/E-Migrant.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-page="/MisdatosMigrante/MisdatosMigrante" asp-route-correo="@UserManager.GetUserName(User)">Mis datos</a>
+                            <a class="nav-link text-dark" asp-page="/ListadoMigrante/ListadoMigrante" >Migrantes</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link text-dark" id="manage" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
